# leeno-mcp-server

./: .gitignore  CLAUDE.md  PROGETTO_LEENO.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/leeno_mcp/: server.py
src/leeno_mcp/connection/: __init__.py  leeno_macros.py  uno_bridge.py
src/leeno_mcp/mocks/: uno_mock.py
src/leeno_mcp/models/: prezzo.py
src/leeno_mcp/tools/: __init__.py  computo.py  contabilita.py  documents.py  elenco_prezzi.py  export.py  import_prezzi.py
src/leeno_mcp/wrappers/: __init__.py  base.py  computo.py  contabilita.py  document.py  elenco_prezzi.py  varianti.py
tests/: test_giornale.py  test_models.py  test_tools.py
