[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leeno-mcp"
version = "0.1.0"
description = "MCP Server for LeenO - Computi Metrici management through LibreOffice"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LeenO Team" }
]
keywords = ["mcp", "leeno", "libreoffice", "computo", "metrico"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
leeno-mcp = "leeno_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leeno_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
